package it.polimi.ingsw.network.message.server.updatemessage;

import it.polimi.ingsw.network.message.server.ServerMessage;

public abstract class UpdateMessage extends ServerMessage {

    public UpdateMessage() {
        super();
    }
}
