@startuml

title __UPDATEMESSAGE's Class Diagram__\n

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace updatemessage {
            class it.polimi.ingsw.network.message.server.updatemessage.UpdateBoardMessage {
                - domePresent : boolean
                - playerName : String
                - workerIndex : Integer
                + UpdateBoardMessage()
                + execute()
                + getPlayerName()
                + getPosition()
                + getUpdateType()
                + getWorkerIndex()
                + isDomePresent()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace updatemessage {
            abstract class it.polimi.ingsw.network.message.server.updatemessage.UpdateMessage {
                + UpdateMessage()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace updatemessage {
            class it.polimi.ingsw.network.message.server.updatemessage.UpdatePlayersMessage {
                - clientPlayers : ArrayList<ClientPlayer>
                + UpdatePlayersMessage()
                + execute()
                + getClientPlayers()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace updatemessage {
            class it.polimi.ingsw.network.message.server.updatemessage.UpdatePlayersMessage.ClientPlayer {
                - playerName : String
                + ClientPlayer()
                + getColor()
                + getGod()
                + getName()
            }
          }
        }
      }
    }
  }
  

  it.polimi.ingsw.network.message.server.updatemessage.UpdateBoardMessage -up-|> it.polimi.ingsw.network.message.server.updatemessage.UpdateMessage
  it.polimi.ingsw.network.message.server.updatemessage.UpdateBoardMessage o-- it.polimi.ingsw.server.model.player.Position : position
  it.polimi.ingsw.network.message.server.updatemessage.UpdateBoardMessage o-- it.polimi.ingsw.network.message.Enum.UpdateType : updateType
  it.polimi.ingsw.network.message.server.updatemessage.UpdateMessage -up-|> it.polimi.ingsw.network.message.server.ServerMessage
  it.polimi.ingsw.network.message.server.updatemessage.UpdatePlayersMessage -up-|> it.polimi.ingsw.network.message.server.updatemessage.UpdateMessage
  it.polimi.ingsw.network.message.server.updatemessage.UpdatePlayersMessage +-down- it.polimi.ingsw.network.message.server.updatemessage.UpdatePlayersMessage.ClientPlayer
  it.polimi.ingsw.network.message.server.updatemessage.UpdatePlayersMessage.ClientPlayer .up.|> java.io.Serializable
  it.polimi.ingsw.network.message.server.updatemessage.UpdatePlayersMessage.ClientPlayer o-- it.polimi.ingsw.server.model.player.ColorEnum : color
  it.polimi.ingsw.network.message.server.updatemessage.UpdatePlayersMessage.ClientPlayer o-- it.polimi.ingsw.server.model.god.God : playerGod


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
